<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD692">

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="439dp"
        android:layout_height="765dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bg21" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="279dp"
        android:layout_height="271dp"
        android:layout_marginTop="220dp"
        android:text="@string/thank_you_n_for_using_srm_canteen_n_n_your_order_is_confirmed_n_n_you_may_collect_your_order_from_n_the_canteen_in_10_15_mins"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView27" />

    <Button
        android:id="@+id/button15"
        android:layout_width="117dp"
        android:layout_height="41dp"
        android:background="#FB8C00"
        android:onClick="book_another"
        android:text="@string/book_another"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.427" />

</androidx.constraintlayout.widget.ConstraintLayout>