<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD692">

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="542dp"
        android:layout_height="995dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bg21" />

    <Button
        android:id="@+id/button13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="72dp"
        android:background="@android:drawable/ic_menu_revert"
        android:onClick="rEturn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="80dp"
        android:background="#FB8C00"
        android:onClick="Confirm"
        android:text="@string/confirm_order"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/my_cart"
        android:textColor="#FB8C00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/mylistview"
        android:layout_width="316dp"
        android:layout_height="477dp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="@+id/button14"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

</androidx.constraintlayout.widget.ConstraintLayout>