<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD692">

    <Button
        android:id="@+id/button6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/ic_menu_revert"
        android:onClick="rEturn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/fast_food_1"
        android:textColor="#FB8C00"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="603dp"
        android:layout_height="812dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506"
        app:srcCompat="@drawable/ic_bg21" />

    <Button
        android:id="@+id/burgerRem"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bt_remove"
        android:onClick="RemClick"
        app:layout_constraintBottom_toBottomOf="@+id/burgerAdd"
        app:layout_constraintStart_toEndOf="@+id/burgerAdd"
        app:layout_constraintTop_toTopOf="@+id/burgerAdd" />

    <Button
        android:id="@+id/pizzaRem"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bt_remove"
        android:onClick="RemClick"
        app:layout_constraintBottom_toBottomOf="@+id/pizzaAdd"
        app:layout_constraintStart_toEndOf="@+id/pizzaAdd"
        app:layout_constraintTop_toTopOf="@+id/pizzaAdd" />

    <Button
        android:id="@+id/maggiRem"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bt_remove"
        android:onClick="RemClick"
        app:layout_constraintBottom_toBottomOf="@+id/maggiAdd"
        app:layout_constraintStart_toEndOf="@+id/maggiAdd"
        app:layout_constraintTop_toTopOf="@+id/maggiAdd" />

    <Button
        android:id="@+id/maggiAdd"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/bt_add"
        android:onClick="AddClick"
        app:layout_constraintBottom_toBottomOf="@+id/imageView25"
        app:layout_constraintStart_toEndOf="@+id/imageView25"
        app:layout_constraintTop_toTopOf="@+id/imageView25" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/maggi_rs_30"
        android:textColor="#FB8C00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView25"
        app:layout_constraintStart_toStartOf="@+id/imageView25"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/roll_rs_45"
        android:textColor="#FB8C00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="@+id/imageView23"
        app:layout_constraintTop_toBottomOf="@+id/imageView23" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383"
        app:srcCompat="@drawable/pizza" />

    <Button
        android:id="@+id/pizzaAdd"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/bt_add"
        android:onClick="AddClick"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <Button
        android:id="@+id/burgerAdd"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/bt_add"
        android:onClick="AddClick"
        app:layout_constraintBottom_toBottomOf="@+id/imageView24"
        app:layout_constraintStart_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toTopOf="@+id/imageView24" />

    <Button
        android:id="@+id/rollRem"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bt_remove"
        android:onClick="RemClick"
        app:layout_constraintBottom_toBottomOf="@+id/rollAdd"
        app:layout_constraintStart_toEndOf="@+id/rollAdd"
        app:layout_constraintTop_toTopOf="@+id/rollAdd" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/burger_rs_35"
        android:textColor="#FB8C00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView24"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="@+id/imageView24"
        app:layout_constraintTop_toBottomOf="@+id/imageView24" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@drawable/roll" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:srcCompat="@drawable/burger" />

    <Button
        android:id="@+id/rollAdd"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/bt_add"
        android:onClick="AddClick"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="@+id/imageView23" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603"
        app:srcCompat="@drawable/maggi" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/pizza_rs_85"
        android:textColor="#FB8C00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />
</androidx.constraintlayout.widget.ConstraintLayout>